Remove Duplicates from Sorted Array

--- a/m/easy/1.twoSum.md
+++ b/m/easy/1.twoSum.md
@@ -32,7 +32,7 @@ class Solution:
                     return i, j
 ```
 
-## Javob-2 (0.894s ms ,52 MB)
+## Javob-2 (894 ms ,52 MB)
 
 ```python
 class Solution:
